force-app/main/default/objects/Sales_History__c/Sales_History__c.object-meta.xml
<CustomObject>
    <label>DN-Sales History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>