force-app/main/default/objects/Sales_History__c/fields/Address3__c.field-meta.xml
<CustomField>
    <fullName>Address3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>