force-app/main/default/objects/Sales_History__c/fields/Address4__c.field-meta.xml
<CustomField>
    <fullName>Address4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>