force-app/main/default/objects/Sales_History__c/fields/BV_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>BV_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BV Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>