force-app/main/default/objects/Sales_History__c/fields/BV_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>BV_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BV Created Date</label>
    <type>Date</type>
</CustomField>