force-app/main/default/objects/Sales_History__c/fields/BV_ID__c.field-meta.xml
<CustomField>
    <fullName>BV_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>