force-app/main/default/objects/Sales_History__c/fields/CustNo__c.field-meta.xml
<CustomField>
    <fullName>CustNo__c</fullName>
    <formula>Account__r.Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustNo</label>
    <type>Text</type>
</CustomField>