force-app/main/default/objects/Sales_History__c/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <description>The name of the individual at the Account that placed the order with customer service.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Who placed the order?</inlineHelpText>
    <label>Customer Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>