force-app/main/default/objects/Sales_History__c/fields/Detail_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Detail_Roll_Up__c</fullName>
    <label>Roll-up Total</label>
    <summarizedField>Sales_History_Details__c.Extended_Amount__c</summarizedField>
    <summaryForeignKey>Sales_History_Details__c.Order_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>