force-app/main/default/objects/Sales_History__c/fields/Digital__c.field-meta.xml
<CustomField>
    <fullName>Digital__c</fullName>
    <label>Digital</label>
    <summarizedField>Sales_History_Details__c.Exact_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_History_Details__c.Digital__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_History_Details__c.Order_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>