force-app/main/default/objects/Sales_History__c/fields/DN_Zimmer_Abutment_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>DN_Zimmer_Abutment_Total_Units__c</fullName>
    <description>Total Abutment units from related Sales History Detail records</description>
    <inlineHelpText>Includes TEHA and traditional healing collars</inlineHelpText>
    <label>DN Zimmer Abutment Total Units</label>
    <summarizedField>Sales_History_Details__c.Order_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_History_Details__c.Product_Code__c</field>
        <operation>startsWith</operation>
        <value>TEH, HC</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_History_Details__c.Order_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>