force-app/main/default/objects/Sales_History__c/fields/DN_Zimmer_Imp_to_Abut_Ratio__c.field-meta.xml
<CustomField>
    <fullName>DN_Zimmer_Imp_to_Abut_Ratio__c</fullName>
    <description>Ratio between Total Implants and Total Abutment units from related Sales History Detail records</description>
    <formula>IF(DN_Zimmer_Abutment_Total_Units__c &gt;0, DN_Zimmer_Implant_Total_Units__c / DN_Zimmer_Abutment_Total_Units__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ideal ratio is 1.00</inlineHelpText>
    <label>DN Zimmer Imp to Abut Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>