force-app/main/default/objects/Sales_History__c/fields/End_User_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>End_User_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End User Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>