force-app/main/default/objects/Sales_History__c/fields/Exemption_No__c.field-meta.xml
<CustomField>
    <fullName>Exemption_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Exemption No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>