force-app/main/default/objects/Sales_History__c/fields/FOB__c.field-meta.xml
<CustomField>
    <fullName>FOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FOB</label>
    <length>40</length>
    <type>Text</type>
</CustomField>