force-app/main/default/objects/Sales_History__c/fields/Has_Details__c.field-meta.xml
<CustomField>
    <fullName>Has_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Details</label>
    <type>Checkbox</type>
</CustomField>