force-app/main/default/objects/Sales_History__c/fields/Implant_Units__c.field-meta.xml
<CustomField>
    <fullName>Implant_Units__c</fullName>
    <label>Implant Units</label>
    <summarizedField>Sales_History_Details__c.Order_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_History_Details__c.Product_Category__c</field>
        <operation>equals</operation>
        <value>IMPLANT</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_History_Details__c.Order_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>