force-app/main/default/objects/Sales_History__c/fields/Invoiced_Last_Friday__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Last_Friday__c</fullName>
    <description>Invoiced yesterday will not work on Mondays, therefore, invoiced last Friday.</description>
    <formula>AND( 
DATEVALUE(CreatedDate) = 
( 
TODAY() - 
CASE( 
MOD( TODAY() - DATE( 1900, 1, 7 ), 7 ), 
0,1, 
1,2, 
2,3, 
3,4, 
4,5, 
5,6, 
0) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Was this invoiced on the previous Friday?</inlineHelpText>
    <label>Invoiced Last Friday</label>
    <type>Checkbox</type>
</CustomField>