force-app/main/default/objects/Sales_History__c/fields/Key_Implants__c.field-meta.xml
<CustomField>
    <fullName>Key_Implants__c</fullName>
    <label>Key Implants</label>
    <summarizedField>Sales_History_Details__c.Order_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_History_Details__c.All_ZB_Key_Implants__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_History_Details__c.Order_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>