force-app/main/default/objects/Sales_History__c/fields/MC_Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>MC_Conversion_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MC Conversion Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>