force-app/main/default/objects/Sales_History__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>