force-app/main/default/objects/Sales_History__c/fields/Reusable_Drills__c.field-meta.xml
<CustomField>
    <fullName>Reusable_Drills__c</fullName>
    <label>Reusable Drills</label>
    <summarizedField>Sales_History_Details__c.Order_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_History_Details__c.Reusable_Drill__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_History_Details__c.Order_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>