force-app/main/default/objects/Sales_History__c/fields/Rollup_Total_Exact__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Total_Exact__c</fullName>
    <label>Roll-up Total Exact</label>
    <summarizedField>Sales_History_Details__c.Exact_Total__c</summarizedField>
    <summaryForeignKey>Sales_History_Details__c.Order_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>