force-app/main/default/objects/Sales_History__c/fields/Sales_Tax_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Tax 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>