force-app/main/default/objects/Sales_History__c/fields/Sales_Tax_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_2_Amount__c</fullName>
    <label>Sales Tax 2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>