force-app/main/default/objects/Sales_History__c/fields/Salesperson_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesperson Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>