force-app/main/default/objects/Sales_History__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>IF( Address1__c &lt;&gt; null &amp;&amp; Address2__c &lt;&gt; null &amp;&amp; Address3__c &lt;&gt; null &amp;&amp; Address4__c &lt;&gt; null, Address1__c + &quot; &quot; + Address2__c + &quot; &quot; + Address3__c + &quot; &quot; + Address4__c + &quot;, &quot; + City__c + &quot;, &quot; + State__c + &quot; &quot; + Zip_Postal_Code__c, 
IF( Address1__c &lt;&gt; null &amp;&amp; Address2__c &lt;&gt; null &amp;&amp; Address3__c &lt;&gt; null &amp;&amp; Address4__c = null, Address1__c + &quot; &quot; + Address2__c + &quot; &quot; + Address3__c + &quot;, &quot; + City__c + &quot;, &quot; + State__c + &quot; &quot; + Zip_Postal_Code__c, 
IF( Address1__c &lt;&gt; null &amp;&amp; Address2__c &lt;&gt; null &amp;&amp; Address3__c = null &amp;&amp; Address4__c = null, Address1__c + &quot; &quot; + Address2__c + &quot;, &quot; + City__c + &quot;, &quot; + State__c + &quot; &quot; + Zip_Postal_Code__c,
IF( Address1__c &lt;&gt; null &amp;&amp; Address2__c = null &amp;&amp; Address3__c = null &amp;&amp; Address4__c = null, Address1__c + &quot;, &quot; + City__c + &quot;, &quot; + State__c + &quot; &quot; + Zip_Postal_Code__c, 
IF( Address1__c &lt;&gt; null &amp;&amp; Address2__c = null &amp;&amp; Address3__c &lt;&gt; null &amp;&amp; Address4__c = null, Address1__c + &quot; &quot; + Address3__c + &quot;, &quot; + City__c + &quot;, &quot; + State__c + &quot; &quot; + Zip_Postal_Code__c, null)))))</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>