force-app/main/default/objects/Sales_History__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>