force-app/main/default/objects/Sales_History__c/fields/Territory_Description__c.field-meta.xml
<CustomField>
    <fullName>Territory_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>