force-app/main/default/objects/Sales_History__c/fields/Total_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Before_Discount__c</fullName>
    <formula>Total__c  -  Sales_Tax_1_Amount__c - Sales_Tax_2_Amount__c + Total_Discount_Amount__c - Freight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Before Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>