force-app/main/default/objects/Sales_History__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <formula>HYPERLINK(
&apos;https://www.google.com/search?q=&apos;&amp;Ref_No__c,
Ref_No__c
)</formula>
    <label>Tracking Number</label>
    <type>Text</type>
</CustomField>