force-app/main/default/objects/Sales_History__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trigger</label>
    <length>5</length>
    <type>Text</type>
</CustomField>