force-app/main/default/objects/Sales_History__c/fields/TTM__c.field-meta.xml
<CustomField>
    <fullName>TTM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked If Invoice Date Falls With In Last 1 Yr</description>
    <label>TTM</label>
    <type>Checkbox</type>
</CustomField>