force-app/main/default/objects/Sales_History__c/fields/TTM_Formula__c.field-meta.xml
<CustomField>
    <fullName>TTM_Formula__c</fullName>
    <formula>AND(
Invoice_Date__c &gt;  ADDMONTHS(TODAY(),-12),
Invoice_Date__c &lt;  TODAY()
)</formula>
    <inlineHelpText>Checked If Invoice Falls In Trailing Twelve Months (TTM)</inlineHelpText>
    <label>TTM</label>
    <type>Checkbox</type>
</CustomField>