force-app/main/default/objects/Sales_History__c/recordTypes/DN_US_Sales_History_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>DN_US_Sales_History_Record_Type</fullName>
    <active>true</active>
    <label>DN-US-Sales History Record Type</label>
</RecordType>