force-app/main/default/objects/Sales_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_PO_Number__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Ship_Via__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>