force-app/main/default/objects/Sales_History__c/listViews/Invoiced_Last_Fri_Appalachian_Territory.listView-meta.xml
<ListView>
    <fullName>Invoiced_Last_Fri_Appalachian_Territory</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact_Name__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Code__c</field>
        <operation>contains</operation>
        <value>1166,1105,1170,1015,1165,1161,1095</value>
    </filters>
    <filters>
        <field>Invoiced_Last_Friday__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoiced Last Fri. Appalachian Territory</label>
    <language>en_US</language>
    <sharedTo>
        <group>DN_USA_App_MSD_Regen</group>
        <group>DN_USA_Buckeye_App_ISR</group>
        <group>DN_USA_ST_SFL_DDSS</group>
    </sharedTo>
</ListView>