force-app/main/default/objects/Sales_History__c/listViews/Invoiced_Last_Frida_South_N_E_Territory.listView-meta.xml
<ListView>
    <fullName>Invoiced_Last_Frida_South_N_E_Territory</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact_Name__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Code__c</field>
        <operation>contains</operation>
        <value>1066,1090,1001,1134,1092,1171</value>
    </filters>
    <filters>
        <field>Invoiced_Last_Friday__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoiced Last Friday South NE Territory</label>
    <language>en_US</language>
    <sharedTo>
        <group>DN_USA_NNE_SNE_ISR</group>
        <group>DN_USA_NNE_SNE_MNY_DDSS</group>
        <group>DN_USA_North_N_E_South_N_E_Regen</group>
    </sharedTo>
</ListView>