force-app/main/default/objects/Sales_History__c/listViews/Invoiced_Last_Friday.listView-meta.xml
<ListView>
    <fullName>Invoiced_Last_Friday</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact_Name__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total__c</columns>
    <columns>Salesperson_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoiced_Last_Friday__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Oracle Integration,Jeff Zarek</value>
    </filters>
    <label>Invoiced Last Friday</label>
    <sharedTo>
        <group>DN_Canada_Sales_Team</group>
        <group>DN_USA_Sales_Team</group>
        <group>NAM_Sales_Users</group>
        <role>DN_NORTHAMER_All</role>
    </sharedTo>
</ListView>