force-app/main/default/objects/Sales_History__c/listViews/Invoiced_Last_Friday_Buckeye_Territory.listView-meta.xml
<ListView>
    <fullName>Invoiced_Last_Friday_Buckeye_Territory</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact_Name__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total__c</columns>
    <columns>Salesperson_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Code__c</field>
        <operation>contains</operation>
        <value>1061,1041,1063,1021,1078,1067,1068,1096</value>
    </filters>
    <filters>
        <field>Invoiced_Last_Friday__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoiced Last Friday Buckeye Territory</label>
    <language>en_US</language>
    <sharedTo>
        <group>DN_USA_Buckeye_App_ISR</group>
        <group>DN_USA_KS_GL_BUC_MW_DDSS</group>
        <group>DN_USA_Key_Stone_GL_Buckeye_Regen</group>
    </sharedTo>
</ListView>