force-app/main/default/objects/Sales_History__c/listViews/Invoiced_Last_Friday_Capitol_Territory.listView-meta.xml
<ListView>
    <fullName>Invoiced_Last_Friday_Capitol_Territory</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact_Name__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total__c</columns>
    <columns>Salesperson_ID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Code__c</field>
        <operation>contains</operation>
        <value>1156,1159,1160,1162,1079,1022,1163,1006</value>
    </filters>
    <filters>
        <field>Invoiced_Last_Friday__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoiced Last Friday Capitol Territory</label>
    <language>en_US</language>
    <sharedTo>
        <group>DN_USA_CB_Capitol_Southeast_Regen</group>
        <group>DN_USA_CP_SE_DDSS</group>
        <group>DN_USA_Metro_NY_ISR</group>
    </sharedTo>
</ListView>