force-app/main/default/objects/Sales_History__c/listViews/Invoiced_Last_Friday_Central_Canada.listView-meta.xml
<ListView>
    <fullName>Invoiced_Last_Friday_Central_Canada</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact_Name__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total__c</columns>
    <columns>Salesperson_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Code__c</field>
        <operation>equals</operation>
        <value>CA008,CA014,CA016,CA015,CA009</value>
    </filters>
    <filters>
        <field>Invoiced_Last_Friday__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoiced Last Friday Central Canada</label>
    <language>en_US</language>
    <sharedTo>
        <group>DN_USA_Canada_ISR</group>
    </sharedTo>
</ListView>