force-app/main/default/objects/Sales_History__c/listViews/Invoiced_Last_Friday_Central_Territory.listView-meta.xml
<ListView>
    <fullName>Invoiced_Last_Friday_Central_Territory</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact_Name__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total__c</columns>
    <columns>Salesperson_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Code__c</field>
        <operation>contains</operation>
        <value>1097,1098,1099,1054,1102,1203,1027</value>
    </filters>
    <filters>
        <field>Invoiced_Last_Friday__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoiced Last Friday Central Territory</label>
    <language>en_US</language>
    <sharedTo>
        <group>DN_USA_CEN_CL_NS_DDSS</group>
        <group>DN_USA_Chicago_Land_NS_Regen</group>
    </sharedTo>
</ListView>